# COS598-ImageProcessing

./: .gitignore
hw2/: green_README.docx  main.py
hw3/: green_readme_hw3.docx  q1.py  q2-2.py  q2.py  q3-2.py  q3.py
hw4/: main.py  pyproject.toml  requirements.txt
