[tool.poetry]
name = "hw4"
version = "0.1.0"
description = ""
authors = ["Adam Green <adamg765@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
